[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scene/ArrayLinesSet_Name.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scene/ArrayLinesSet_Expression.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scene/ArrayLinesSet.gd" type="Script" id=3]
[ext_resource path="res://Theme/empty.stylebox" type="StyleBox" id=4]
[ext_resource path="res://Theme/maya/maya.theme" type="Theme" id=5]
[ext_resource path="res://Icons/caret-down-solid.svg" type="Texture" id=6]
[ext_resource path="res://Icons/caret-up-solid.svg" type="Texture" id=7]
[ext_resource path="res://icon.png" type="Texture" id=8]
[ext_resource path="res://Theme/maya/FiraCode/FiraCode-Bold.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Icons/quote-left-solid.svg" type="Texture" id=10]
[ext_resource path="res://Icons/trash-can-solid.svg" type="Texture" id=11]
[ext_resource path="res://Theme/maya/Type/Button/pressed.highlight.stylebox" type="StyleBox" id=12]
[ext_resource path="res://Icons/plus-solid.svg" type="Texture" id=13]
[ext_resource path="res://Scripts/BaseButton_Handler.gd" type="Script" id=14]
[ext_resource path="res://Icons/clone-solid.svg" type="Texture" id=15]

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 3.0
content_margin_right = 1.0
bg_color = Color( 0.146009, 0.129933, 0.151367, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0.25098 )
corner_radius_top_left = 10
corner_radius_bottom_left = 10
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=12]
size = 12
outline_color = Color( 0, 0, 0, 0.756863 )
use_filter = true
extra_spacing_top = 1
extra_spacing_bottom = 1
extra_spacing_space = 1
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxLine" id=8]
color = Color( 0, 1, 0.843137, 0 )
grow_begin = 12.0
grow_end = 12.0
thickness = 2
vertical = true

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 0.25098 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id=1]

[node name="ArrayLineEditor" type="PanelContainer"]
margin_right = 481.0
margin_bottom = 226.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource( 5 )
custom_styles/panel = SubResource( 3 )
script = ExtResource( 3 )

[node name="Data" type="VBoxContainer" parent="."]
margin_left = 3.0
margin_right = 506.0
margin_bottom = 226.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HS" type="HSeparator" parent="Data"]
margin_right = 503.0
margin_bottom = 6.0
custom_constants/separation = 6
custom_styles/separator = SubResource( 10 )

[node name="Editor" type="HBoxContainer" parent="Data"]
margin_top = 10.0
margin_right = 503.0
margin_bottom = 216.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="Data/Editor"]
margin_right = 26.0
margin_bottom = 206.0
rect_min_size = Vector2( 24, 0 )
custom_styles/panel = SubResource( 7 )

[node name="RearrangeCtrl" type="VBoxContainer" parent="Data/Editor/PanelContainer"]
margin_right = 26.0
margin_bottom = 206.0
alignment = 1

[node name="MoveUp" type="Button" parent="Data/Editor/PanelContainer/RearrangeCtrl"]
margin_top = 31.0
margin_right = 26.0
margin_bottom = 55.0
rect_min_size = Vector2( 26, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 2
icon = ExtResource( 7 )
icon_align = 1
expand_icon = true
script = ExtResource( 14 )

[node name="HS" type="HSeparator" parent="Data/Editor/PanelContainer/RearrangeCtrl"]
margin_top = 59.0
margin_right = 26.0
margin_bottom = 95.0
mouse_filter = 1
custom_constants/separation = 36
custom_styles/separator = SubResource( 4 )

[node name="StepLabel" type="Label" parent="Data/Editor/PanelContainer/RearrangeCtrl"]
modulate = Color( 0.380392, 0.92549, 0.941176, 1 )
margin_top = 99.0
margin_right = 26.0
margin_bottom = 117.0
mouse_filter = 1
custom_fonts/font = SubResource( 12 )
text = "0"
align = 1

[node name="HS2" type="HSeparator" parent="Data/Editor/PanelContainer/RearrangeCtrl"]
margin_top = 121.0
margin_right = 26.0
margin_bottom = 147.0
mouse_filter = 1
custom_constants/separation = 26
custom_styles/separator = SubResource( 4 )

[node name="MoveDown" type="Button" parent="Data/Editor/PanelContainer/RearrangeCtrl"]
margin_top = 151.0
margin_right = 26.0
margin_bottom = 175.0
rect_min_size = Vector2( 26, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 2
icon = ExtResource( 6 )
icon_align = 1
expand_icon = true
script = ExtResource( 14 )

[node name="HS" type="VSeparator" parent="Data/Editor"]
margin_left = 30.0
margin_right = 35.0
margin_bottom = 206.0
mouse_filter = 1
custom_constants/separation = 5
custom_styles/separator = SubResource( 8 )

[node name="Actor" type="VBoxContainer" parent="Data/Editor"]
margin_left = 39.0
margin_right = 182.0
margin_bottom = 206.0
rect_min_size = Vector2( 143, 0 )
alignment = 1

[node name="Portrait" type="CenterContainer" parent="Data/Editor/Actor"]
margin_top = 9.0
margin_right = 143.0
margin_bottom = 137.0
rect_min_size = Vector2( 128, 128 )

[node name="Sprite" type="Sprite" parent="Data/Editor/Actor/Portrait"]
scale = Vector2( 1.5, 1 )
texture = ExtResource( 8 )
centered = false

[node name="Label" type="Label" parent="Data/Editor/Actor"]
visible = false
margin_top = 132.0
margin_right = 143.0
margin_bottom = 150.0
mouse_filter = 1
text = "Actor"

[node name="HS" type="HSeparator" parent="Data/Editor/Actor"]
margin_top = 141.0
margin_right = 143.0
margin_bottom = 141.0
custom_constants/separation = 0
custom_styles/separator = SubResource( 9 )

[node name="Name" parent="Data/Editor/Actor" instance=ExtResource( 1 )]
margin_top = 145.0
margin_right = 143.0
margin_bottom = 169.0
mouse_filter = 1
mouse_default_cursor_shape = 2
script = ExtResource( 14 )

[node name="Expression" parent="Data/Editor/Actor" instance=ExtResource( 2 )]
margin_top = 173.0
margin_right = 143.0
margin_bottom = 197.0
mouse_filter = 1
mouse_default_cursor_shape = 2
script = ExtResource( 14 )

[node name="HS2" type="VSeparator" parent="Data/Editor"]
margin_left = 186.0
margin_right = 192.0
margin_bottom = 206.0
mouse_filter = 1
custom_constants/separation = 6
custom_styles/separator = ExtResource( 4 )

[node name="LinesEditor" type="HBoxContainer" parent="Data/Editor"]
margin_left = 196.0
margin_right = 493.0
margin_bottom = 206.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Lines" type="TextEdit" parent="Data/Editor/LinesEditor"]
margin_right = 260.0
margin_bottom = 206.0
rect_min_size = Vector2( 260, 120 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 11 )
wrap_enabled = true
caret_blink = true

[node name="SubOptions" type="VBoxContainer" parent="Data/Editor/LinesEditor"]
margin_left = 264.0
margin_right = 290.0
margin_bottom = 206.0

[node name="UseQuote" type="Button" parent="Data/Editor/LinesEditor/SubOptions"]
margin_right = 26.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 0 )
mouse_default_cursor_shape = 2
custom_styles/pressed = ExtResource( 12 )
toggle_mode = true
icon = ExtResource( 10 )
expand_icon = true
script = ExtResource( 14 )

[node name="Delete" type="Button" parent="Data/Editor/LinesEditor/SubOptions"]
margin_top = 28.0
margin_right = 26.0
margin_bottom = 52.0
rect_min_size = Vector2( 24, 0 )
mouse_default_cursor_shape = 2
toggle_mode = true
icon = ExtResource( 11 )
expand_icon = true
script = ExtResource( 14 )

[node name="HS" type="HSeparator" parent="Data/Editor/LinesEditor/SubOptions"]
margin_top = 56.0
margin_right = 26.0
margin_bottom = 60.0

[node name="Duplicate" type="Button" parent="Data/Editor/LinesEditor/SubOptions"]
margin_top = 64.0
margin_right = 26.0
margin_bottom = 88.0
rect_min_size = Vector2( 26, 0 )
hint_tooltip = "Duplicate this dialogue line"
mouse_filter = 1
mouse_default_cursor_shape = 2
icon = ExtResource( 15 )
icon_align = 1
expand_icon = true
script = ExtResource( 14 )

[node name="AddBelow" type="Button" parent="Data/Editor/LinesEditor/SubOptions"]
visible = false
margin_top = 92.0
margin_right = 26.0
margin_bottom = 116.0
rect_min_size = Vector2( 26, 0 )
hint_tooltip = "Add dialogue line below"
mouse_filter = 1
mouse_default_cursor_shape = 2
icon = ExtResource( 13 )
icon_align = 1
expand_icon = true
script = ExtResource( 14 )

[node name="HS" type="HSeparator" parent="Data/Editor/LinesEditor"]
margin_left = 294.0
margin_right = 297.0
margin_bottom = 206.0
mouse_filter = 1
custom_styles/separator = SubResource( 1 )

[node name="VS" type="VSeparator" parent="Data/Editor"]
margin_left = 497.0
margin_right = 503.0
margin_bottom = 206.0
mouse_filter = 1
custom_constants/separation = 6
custom_styles/separator = ExtResource( 4 )

[node name="HS2" type="HSeparator" parent="Data"]
margin_top = 220.0
margin_right = 503.0
margin_bottom = 226.0
custom_constants/separation = 6
custom_styles/separator = SubResource( 10 )

[connection signal="visibility_changed" from="." to="." method="_on_self_visibility_changed"]
[connection signal="pressed" from="Data/Editor/PanelContainer/RearrangeCtrl/MoveUp" to="." method="move_up_set"]
[connection signal="pressed" from="Data/Editor/PanelContainer/RearrangeCtrl/MoveDown" to="." method="move_down_set"]
[connection signal="item_selected" from="Data/Editor/Actor/Name" to="." method="_on_Name_item_selected"]
[connection signal="pressed" from="Data/Editor/LinesEditor/SubOptions/Delete" to="." method="_on_Delete_pressed"]
[connection signal="pressed" from="Data/Editor/LinesEditor/SubOptions/Duplicate" to="." method="_on_Duplicate_pressed"]
[connection signal="pressed" from="Data/Editor/LinesEditor/SubOptions/AddBelow" to="." method="_on_AddBelow_pressed"]
